--- a/style.css
+++ b/style.css
@@ -7,7 +7,11 @@ body,
 
 #app {
   display: flex;
-  flex-direction: column-reverse;
+  flex-direction: column;
+  /* alinha os itens no eixo contrário ao flex-direction */
+  align-items: center;
+  /* alinha os itens no mesmo eixo que o flex-direction */
+  justify-content: space-around;
 }
 
 .box {
