--- a/style.css
+++ b/style.css
@@ -7,16 +7,12 @@ body,
 
 #app {
   display: flex;
-  flex-direction: column;
-  /* alinha os itens no eixo contrário ao flex-direction */
-  align-items: center;
-  /* alinha os itens no mesmo eixo que o flex-direction */
-  justify-content: space-around;
 }
 
 .box {
-  width: 60px;
+  width: 300px;
   height: 60px;
   background-color: #f00;
   margin: 5px;
+  flex: 1;
 }
