--- a/02/style.css
+++ b/02/style.css
@@ -1,3 +1,8 @@
+:root {
+  --blue: #1da1f2;
+  --color: #667580;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -5,7 +10,7 @@
 }
 
 body {
-  color: #667580;
+  color: var(--color);
   background-color: #e6ecf8;
   font-family: 'Helvetica Neue', 'Helvetica', Arial, sans-serif;
   text-rendering: optimizeLegibility !important;
@@ -85,7 +90,7 @@ header#main-header div.side input {
   padding: 0 36px 0 12px;
   width: 220px;
   height: 34px;
-  color: #667580;
+  color: var(--color);
   font-size: 12px;
   border: 1px solid #e6ecf0;
   border-radius: 16px;
@@ -104,5 +109,15 @@ header#main-header div.side button {
   font-weight: bold;
   border: 0;
   border-radius: 20px;
-  background-color: #1da1f2;
+  background-color:var(--blue);
+}
+
+div.banner {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #FFF;
+  width: 100%;
+  height: 380px;
+  background-color: var(--blue);
 }
