--- a/02/style.css
+++ b/02/style.css
@@ -22,11 +22,16 @@ button {
   outline: 0 !important;
 }
 
+ul {
+  display: flex;
+  list-style: none;
+}
+
 header#main-header {
   position: relative;
   height: 46px;
   background-color: #fff;
-  box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
 }
 
 div.container {
@@ -37,11 +42,6 @@ div.container {
   height: 100%;
   margin: 0 auto;
   padding: 0 30px;
-}
-
-header#main-header nav ul {
-  display: flex;
-  list-style: none;
 }
 
 header#main-header nav ul li {
@@ -120,4 +120,73 @@ div.banner {
   width: 100%;
   height: 380px;
   background-color: var(--blue);
+}
+
+div.bar {
+  height: 59px;
+  background-color: #FFF;
+  box-shadow: 0 1px 3px rgba(0, 0, 0, 0.25);
+}
+
+div.bar div.container {
+  padding-left: 285px;
+}
+
+div.bar ul {
+  height: 100%;
+}
+
+div.bar ul li {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 0 16px;
+  font-size: 13px;
+  font-weight: bold;
+}
+
+div.bar ul li.active:after {
+  content: '';
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 2px;
+  background-color: var(--blue);
+}
+
+div.bar ul li strong {
+  margin-top: 2px;
+  font-size: 18px;
+  font-weight: bold;
+}
+
+div.bar ul li.active strong {
+  color: var(--blue);
+}
+
+div.bar div.actions {
+  display: flex;
+  align-items: center;
+}
+
+div.bar div.actions button {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-right: 10px;
+  width: 90px;
+  height: 34px;
+  color: var(--blue);
+  font-size: 14px;
+  font-weight: bold;
+  border: 1px solid var(--blue);
+  border-radius: 20px;
+  background-color: #FFF;
+}
+
+div.bar div.actions img {
+  height: 24px;
 }
